syntax = "proto3";

package microshopping;

option go_package = "./proto;microshopping";

// ---------------购物车服务 Cart Service----------------
service CartService {
    // 添加商品到购物车
    rpc AddItem(AddItemRequest) returns (Empty) {}
    // 获取用户购物车
    rpc GetCart(GetCartRequest) returns (Cart) {}
    // 清空用户购物车
    rpc EmptyCart(EmptyCartRequest) returns (Empty) {}
}

message CartItem {
    string product_id = 1;
    int32 quantity = 2;
}

message AddItemRequest {
    string user_id = 1;
    CartItem item = 2;
}

message EmptyCartRequest {
    string user_id = 1;
}

message GetCartRequest {
    string user_id = 1;
}

message Cart {
    string user_id = 1;
    repeated CartItem items = 2; 
}

message Empty {
}